# uot

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: clang-format.yml  clang-tidy.yml  main.yml
libuot/: CMakeLists.txt  building.h  buildings.h  common.h  galaxy.h  galaxygenerator.cpp  galaxygenerator.h  libmain.cpp  libmain.h  messagetypes.cpp  messagetypes.h  messagetypesTests.cpp  modules.h  planet.cpp  planet.h  player.cpp  player.h  resource.cpp  resource.h  sector.cpp  sector.h  sectorobject.h  ship.cpp  ship.h  spacebase.h  spaceobject.h  structs.h  technology.h
libuot/msg/: messagestructs.cpp  messagestructs.h  messagetypes.cpp  messagetypes.h  messagetypesTests.cpp
msg/: messagestructs.cpp  messagestructs.h  messagetypesTests.cpp
uot/: CMakeLists.txt  main.cpp  todo
uot-client/: CMakeLists.txt  SDL2Test  main.cpp
uot-client/include/: assets.h  game_renderer.h  game_resources.h  game_state.h  sdl_utilities.h  uncopiable.h
uot-client/src/: game_renderer.cpp  game_state.cpp  main.cpp  sdl_utilities.cpp
uot-server/: CMakeLists.txt  config.txt  main.cpp  players.h
uot-server/headers/: players.h  server.h
uot-server/net/: net_server_mock.cpp  net_server_mock.h  net_server_uot.cpp  net_server_uot.h  server_txrx.cpp  server_txrx.h
uot-server/src/: players.cpp  server.cpp
uot/imgui-qt3d/: CMakeLists.txt  imguimanager.cpp
uot/imgui-qt3d/imgui/: imgui.h
uot/include/: assets.h  client_context.h  game_gui.h  game_renderer.h  game_rendering.h  game_resources.h  game_state.h  input_handlers.h  msg_queue.h  rendering.h  rendering_common.h  rendering_galaxy.h  rendering_views.h  resource_manager.h  sdl_utilities.h  singleton.h  size_settings.h  texture.h  ui_button.h  ui_menu_lists.h  uncopiable.h  uot_net_client.h
uot/include/constants/: assets.h  size_settings.h
uot/include/net/: client_txrx.h  uot_net_client.h
uot/include/rendering/: animation.h  rendering.h  rendering_all_views.h  rendering_common.h  rendering_designer.h  rendering_end.h  rendering_galaxy.h  rendering_menu.h  rendering_planet.h  rendering_sector.h  rendering_tech.h  rendering_universe.h  rendering_views.h  texture.h  ui_button.h  ui_list.h  ui_menu_lists.h
uot/include/rendering/gui/: button_handlers.h  buttons.h
uot/include/utilities/: fleet_utils.h  input_utilities.h  sdl_include.h  sdl_utilities.h  setup_utils.h
uot/src/: game_gui.cpp  game_renderer.cpp  game_rendering.cpp  game_state.cpp  input_handlers.cpp  input_utilities.cpp  main.cpp  msg_queue.cpp  rendering_common.cpp  rendering_galaxy.cpp  rendering_menu.cpp  rendering_universe.cpp  sdl_utilities.cpp  setup_utils.cpp  uot_net_client.cpp
uot/src/net/: client_txrx.cpp  net_client_mock.cpp  uot_net_client.cpp
uot/src/rendering/: animation.cpp  buttons.cpp  rendering_common.cpp  rendering_designer.cpp  rendering_end.cpp  rendering_galaxy.cpp  rendering_menu.cpp  rendering_planet.cpp  rendering_sector.cpp  rendering_tech.cpp  rendering_universe.cpp  ui_list.cpp
uot/src/utilities/: fleet_utils.cpp  input_utils.cpp  sdl_utils.cpp  setup_utils.cpp
webpage/: about.html  aboutus.html  index.html  photos.html
webpage/content/: bootstrap.css  site.css
